FIX: overflow and hover lists

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,6 +3,8 @@ body{
   background-color: $light-blue;
   font-family: $montserrat;
   margin: 0;
+  float: left;
+  min-width: 100%;
   // color: $dark-ocean;
 }
 
