--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,6 +10,7 @@
   }
   article{
     padding: 10px;
+    overflow-x: visible;
     color: $white;
     flex: auto;
     &.filters{ 
